...
    />
    <Tab.Screen
      name="Settings"
      component={Settings}
      options={{
        tabBarIcon: ({focused}) => settingsIcon(focused),
        tabBarTestID: "settingsBottomNavButton"
      }}
    />
  </Tab.Navigator>
);

export default Screens;
...
