...
            right={() => createRightListIcons()}
            style={styles.item}
            rippleColor={theme.colors.surfaceVariant}
          />
          <Divider />
          <List.Item
            title="Show Errors"
            onPress={() => errorModal.showModal()}
            right={() => createRightListIcons(errors)}
            style={styles.item}
            rippleColor={theme.colors.surfaceVariant}
          />
        </Surface>
...
